// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`considers both value and suitability 1`] = `
Array [
  Array [
    Object {
      "shipId": 0,
      "val": 0.3,
    },
    Object {
      "shipId": 0,
      "val": 0.4,
    },
  ],
  Array [
    Object {
      "shipId": 1,
      "val": 0.5,
    },
    Object {
      "shipId": 1,
      "val": 0.6,
    },
  ],
  Array [
    Object {
      "shipId": 2,
      "val": 0.7,
    },
    Object {
      "shipId": 2,
      "val": 0.5,
    },
  ],
]
`;

exports[`generates a value for each ship-goal combination 1`] = `
Array [
  Array [
    Object {
      "shipId": 0,
      "val": 0.5,
    },
    Object {
      "shipId": 0,
      "val": 0.5,
    },
  ],
  Array [
    Object {
      "shipId": 1,
      "val": 0.5,
    },
    Object {
      "shipId": 1,
      "val": 0.5,
    },
  ],
  Array [
    Object {
      "shipId": 2,
      "val": 0.5,
    },
    Object {
      "shipId": 2,
      "val": 0.5,
    },
  ],
]
`;
